--- a/eislekerhaus/package.json
+++ b/eislekerhaus/package.json
@@ -30,6 +30,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
