--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,5 @@ jobs:
           fi
 
           # Restart the app with pm2 using the production start script
-          pm2 stop 0
-          pm2 save
-          pm2 start npm --name "eislekerhaus" -- run dev
+          pm2 restart eislekerhaus --update-env
           pm2 save
