installing the dependencies and building

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,8 @@ jobs:
           fi
 
           # Install dependencies and build the app
-          # npm install
-          # npm run build
+          npm install
+          npm run build
 
           # Install pm2 if it is not found
           if ! command -v pm2 &> /dev/null; then
