--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,5 +46,7 @@ jobs:
           fi
 
           # Restart the app with pm2 using the production start script
-          pm2 restart eislekerhaus --update-env
+          pm2 delete 0
+          pm2 save
+          pm2 start npm --name "eislekerhaus" -- run dev
           pm2 save
