--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
 
           # Install dependencies and build the app
           npm install
-          # npm run build
+          npm run build
 
           # Install pm2 if it is not found
           if ! command -v pm2 &> /dev/null; then
