--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,13 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: 22
         script: |
+          set -e
           # Aplicar actualizaciones de seguridad
           # sudo apt update && sudo apt upgrade -y
 
           cd /var/www/EislekerHaus_Static/
-          git pull origin main
-          git status
+          git fetch origin
+          git reset --hard origin/main
 
           # Install Node.js if npm is not found
           if ! command -v npm &> /dev/null; then
@@ -47,5 +48,9 @@ jobs:
 
           # pm2 start npm --name eislekerhaus -- run start
           # Restart the app with pm2 using the production start script
-          pm2 restart eislekerhaus --force
+          if pm2 list | grep -q eislekerhaus; then
+            pm2 restart eislekerhaus --force
+          else
+            pm2 start npm --name eislekerhaus -- run start
+          fi
           pm2 save --force
