modificado actions para las dependencias

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,5 +47,5 @@ jobs:
 
           # pm2 start npm --name eislekerhaus -- run start
           # Restart the app with pm2 using the production start script
-          pm2 restart eislekerhaus --force
+          pm2 restart eislekerhaus --update-env --force
           pm2 save --force
